--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,5 +1,9 @@
 ---
 layout: layouts/base.njk
 ---
+{%- css %}{% include "public/css/index.css" %}{% endcss %}
+<div class="hero-image">
+    <img src="img/donkey-smoker.jpg" alt="cowboy smoking pipe on donkey">
+</div>
 
 {{ content | safe }}
