--- a/content/index.njk
+++ b/content/index.njk
@@ -5,6 +5,10 @@ eleventyNavigation:
   order: 1
 numberOfLatestPostsToShow: 3
 ---
+<div class="hero-image">
+    <img src="img/donkey-smoker.jpg" alt="cowboy smoking pipe on donkey">
+</div>
+
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
 <h1>Latest {{ latestPostsCount }} Post{% if latestPostsCount != 1 %}s{% endif %}</h1>
