--- a/public/css/index.css
+++ b/public/css/index.css
@@ -155,7 +155,8 @@ header {
 	padding: 1em;
 }
 .home-link {
-	font-size: 1em; /* 16px /16 */
+	/* font-size: 1em; /* 16px /16 */
+	font-size: 1.25em;
 	font-weight: 700;
 	margin-right: 2em;
 }
@@ -272,3 +273,27 @@ a[href].header-anchor:focus,
 h2 + .header-anchor {
 	font-size: 1.5em;
 }
+
+/* Mobile nav styles in case more links are added!
+@media all and (max-width: 768px) {	
+	header {
+		flex-flow: column wrap;
+		gap: 0;
+	}
+	.home-link {
+		margin-right: 0;
+		margin-bottom: 0.5em;
+	}
+	.nav {
+		align-content: center;
+		flex-wrap: wrap;
+	}
+	.nav-item {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-right: 0;
+		margin-top: 0.25em;
+		width: 100%;
+	}
+} */
