Add favicon attribute

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -54,7 +54,9 @@
 			{{ content | safe }}
 		</main>
 
-		<footer></footer>
+		<footer>
+			<a href="https://www.freepik.com/icon/donkey_6138328" class="icon-attribute">Icon by DinosoftLabs</a>
+		</footer>
 
 		<!-- Current page: {{ page.url | htmlBaseUrl }} -->
 	</body>
