--- a/public/css/index.css
+++ b/public/css/index.css
@@ -284,12 +284,13 @@ h2 + .header-anchor {
 	font-weight: 700;
 }
 
-/* Footer styles */
+/* Footer styles
 footer {
 	font-size: 0.75em;
 	margin-top: 0.5em;
 	padding-left: 1rem;
 }
+*/
 
 /* Mobile nav styles in case more links are added!
 @media all and (max-width: 768px) {	
