--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -50,6 +50,7 @@
 				{%- for entry in collections.all | eleventyNavigation %}
 					<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
 				{%- endfor %}
+					<li><a href="https://wildbluepress.com/dances-with-donkeys-gallery/" target="_blank" class="gallery-link">Gallery</a></li>
 				</ul>
 			</nav>
 		</header>
