--- a/public/css/index.css
+++ b/public/css/index.css
@@ -284,6 +284,11 @@ h2 + .header-anchor {
 	font-weight: 700;
 }
 
+/* Gallery list item */
+.gallery-link {
+	text-decoration: none;
+}
+
 /* Footer styles
 footer {
 	font-size: 0.75em;
