--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -59,7 +59,12 @@
 			{{ content | safe }}
 		</main>
 
-		<footer></footer>
+		<footer>
+			<h2>Contact</h2>
+			<a href="mailto:authorjimduke@gmail.com" target="_blank" id="email">
+				authorjimduke@gmail.com
+			</a>
+		</footer>
 
 		<!-- Current page: {{ page.url | htmlBaseUrl }} -->
 	</body>
