--- a/public/css/index.css
+++ b/public/css/index.css
@@ -289,6 +289,13 @@ h2 + .header-anchor {
 	text-decoration: none;
 }
 
+/* Footer styles */
+footer {
+	padding-left: 1rem;
+	margin-top: 0.5em;
+	padding-bottom: 4em;
+	border-top: 1px dashed var(--color-gray-20);
+}
 /* Footer styles
 footer {
 	font-size: 0.75em;
