Relocate contact to about page only

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -59,12 +59,7 @@
 			{{ content | safe }}
 		</main>
 
-		<footer>
-			<h2>Contact</h2>
-			<a href="mailto:authorjimduke@gmail.com" target="_blank" id="email">
-				authorjimduke@gmail.com
-			</a>
-		</footer>
+		<footer></footer>
 
 		<!-- Current page: {{ page.url | htmlBaseUrl }} -->
 	</body>
